# agentic-patterns-101

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: uv-ci.yaml
agentic-patterns/: agents-as-tools.py  graph-multi-agent-tool.py  graph-multi-agent.py  graph-multi-agent_tool.py  graph_multi-agent.py  graph_multi-agent_tool.py  llm-routing.py  llm_routing.py  mcp-server-tools.py  parallel-workflow-tool.py  pure-tools.py  reflection_pattern.py  sequential-workflow-tool.py  sequential-workflow.py  swarm.py
assets/: strands_agents_pattern.drawio
