[project]
name = "agentic-patterns"
version = "0.0.1"
description = "Agentic Patterns"
authors = [
    { name = "Nina Cvetkovska", email = "nina.cvetkovska@loka.com" },
    { name = "Petar Kalinovski", email = "petar.kalinovski@loka.com" },
    { name = "Bojan Jakimovski - Shekswess", email = "bojan.jakimovski@loka.com" },
    
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.40.1",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "strands-agents==1.2.0",
    "strands-agents-tools==0.2.3",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["I", "E", "F"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.rules]
non-subscriptable = "warn"
unused-ignore-comment = "warn"
invalid-argument-type = "warn"
invalid-parameter-default = "warn"
unresolved-import = "warn"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that make live API calls (deselect with '-m \"not live\"')",
    "asyncio: marks tests that use asyncio",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-mock==3.14.1",
    "ipykernel==6.30.0",
    "ruff==0.12.7",
    "ty==0.0.1a8",
]
